[package]
name = "meme-bot"
version = "0.1.0"
authors = ["Caleb Boylan <calebboylan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["full"] }
serde = "1"
serde_json = "1"
reqwest = { version = "0.10", features = ["json"] }
inotify = "0.8"

[profile.release]
opt-level = "s"
lto = "thin"
